Include `--add-modules` in options normalization
PiperOrigin-RevId: 368045753